# dify-official-plugins

models/vertex_ai_apadua/: manifest.yaml  pyproject.toml  requirements.txt
models/vertex_ai_apadua/models/: common.py
models/vertex_ai_apadua/models/llm/: anthropic.claude-haiku-4-5.yaml  anthropic.claude-opus-4-5.yaml  anthropic.claude-opus-4-6.yaml  anthropic.claude-sonnet-4-5.yaml  anthropic.claude-sonnet-4-6.yaml  gemini-2.0-flash-001.yaml  gemini-2.0-flash-exp.yaml  gemini-2.0-flash-lite-001.yaml  gemini-2.5-computer-use-preview-10-2025.yaml  gemini-2.5-flash-lite-preview-06-17.yaml  gemini-2.5-flash-lite-preview-09-2025.yaml  gemini-2.5-flash-lite.yaml  gemini-2.5-flash-preview-09-2025.yaml  gemini-2.5-flash.yaml  gemini-2.5-pro.yaml  gemini-3-flash-preview.yaml  gemini-3-pro-preview.yaml  gemini-3.1-flash-image-preview.yaml  gemini-3.1-flash-lite-preview.yaml  gemini-3.1-pro-preview.yaml  llm.py
models/vertex_ai_apadua/models/text_embedding/: multimodalembedding-001.yaml  text-embedding-004.yaml  text_embedding.py
models/vertex_ai_apadua/provider/: vertex_ai_apadua.py  vertex_ai_apadua.yaml
