[project]
name = "vertex_ai_apadua"
version = "1.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify_plugin==0.7.0",
    "anthropic==0.42.0",
    "google-genai==1.51.0",
    "google-api-core==2.23.0",
    "Pillow==11.3.0",
    "tiktoken==0.8.0",
    "google-cloud-aiplatform[all]==1.128.0",
    "sentencepiece==0.2.0",
    "google-auth==2.29.0",
    "anthropic[vertex]==0.42.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
